--- a/web/src/index.css
+++ b/web/src/index.css
@@ -24,6 +24,11 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
+    --chart-1: 221.2 83.2% 53.3%;
+    --chart-2: 271.5 81.3% 55.9%;
+    --chart-3: 173.7 58.9% 39.2%;
+    --chart-4: 43.3 96.4% 56.3%;
+    --chart-5: 27.4 87.9% 56.9%;
   }
 
   .dark {
@@ -46,6 +51,11 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+    --chart-1: 217.2 91.2% 59.8%;
+    --chart-2: 271.5 81.3% 65.9%;
+    --chart-3: 173.7 58.9% 49.2%;
+    --chart-4: 43.3 96.4% 66.3%;
+    --chart-5: 27.4 87.9% 66.9%;
   }
 }
 
